--- a/index.html
+++ b/index.html
@@ -11,8 +11,33 @@
 
 
     <input type="text" id="myText" value="Apple" placeholder="test">
+    
+    <label for="from">From: </label>
+    <select name="from" id="fromDateSelect">
+        <option value="day">Last Day</option>
+        <option value="week" selected="selected">Last Week</option>
+        <option value="month">Last Month</option>
+        <!-- Year gets too requests from API -->
+        <!-- <option value="year">Last Year</option> -->
+    </select>
 
     <button id="searchBtn" type="button">Search</button>
+
+    <select id="languageSelect">
+        <option value="de">Deutsch</option>
+        <option value="en" selected="selected">English</option>
+        <option value="ar">العربية</option>
+        <option value="es">Español</option>
+        <option value="fr">français</option>
+        <option value="he">עברית</option>
+        <option value="it">Italiano</option>
+        <option value="nl">Nederlands</option>
+        <option value="no">Norsk</option>
+        <option value="pt">Português</option>
+        <option value="ru">русский</option>
+        <option value="se">	Davvisámegiella</option>
+        <option value="zh">中文</option>
+    </select>
 
     <div id="resultsCtn"></div>
 
