--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News App</title>
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-
-    <input type="text" id="myText" value="Apple" placeholder="test">
-    
-    <label for="from">From: </label>
-    <select name="from" id="fromDateSelect">
-        <option value="day">Last Day</option>
-        <option value="week" selected="selected">Last Week</option>
-        <option value="month">Last Month</option>
-        <!-- Year gets too requests from API -->
-        <!-- <option value="year">Last Year</option> -->
-    </select>
-
-    <button id="searchBtn" type="button">Search</button>
 
     <select id="languageSelect">
         <option value="de">Deutsch</option>
@@ -39,10 +27,106 @@
         <option value="zh">中文</option>
     </select>
 
+    <h1>Everything</h1>
+    <input type="text" id="search" value="Apple">
+    
+    <label for="from">From: </label>
+    <select name="from" id="fromDateSelect">
+        <option value="day">Last Day</option>
+        <option value="week" selected="selected">Last Week</option>
+        <option value="month">Last Month</option>
+        <!-- Year gets too requests from API -->
+        <!-- <option value="year">Last Year</option> -->
+    </select>
+
+    <label for="sortBy">Sort by: </label>
+    <select name="sortBy" id="sortBySelect">
+        <option value="relevancy">Relevancy</option>
+        <option value="popularity" selected="selected">Popularity</option>
+        <option value="publishedAt">The Latest</option>
+    </select>
+
+    <button id="searchBtn" type="submit">Search</button>
+
     <div id="resultsCtn"></div>
 
-    <!-- jQuery 3.6.0 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <h1>Headlines</h1>
+    <label for="scountry">Country: </label>
+    <select name="country" id="countrySelect">
+        <option value="ae">	دولة الإمارات العربيّة المتّحدة</option>
+        <option value="ar">Argentina</option>
+        <option value="at">Österreich</option>
+        <option value="au">Australia</option>
+        <option value="be">België</option>
+        <option value="bg">България</option>
+        <option value="br">Brasil</option>
+        <option value="ca">Canada</option>
+        <option value="ch">Schweiz</option>
+        <option value="cn">中国</option>
+        <option value="co">Colombia</option>
+        <option value="cz">Česká republika</option>
+        <option value="de">Deutschland</option>
+        <option value="eg">مصر</option>
+        <option value="fr">France</option>
+        <option value="gb">United Kingdom</option>
+        <option value="gr">Ελλάδα</option>
+        <option value="id">Indonesia</option>
+        <option value="ie">Ireland</option>
+        <option value="il">ישראל</option>
+        <option value="in">भारत,</option>
+        <option value="it">Italia</option>
+        <option value="jp">日本</option>
+        <option value="kr">대한민국</option>
+        <option value="lt">Liechtenstein</option>
+        <option value="lv">Latvija</option>
+        <option value="ma">المغرب</option>
+        <option value="mx">México</option>
+        <option value="my">Malaysia</option>
+        <option value="ng">Nigeria</option>
+        <option value="nl">Nederland</option>
+        <option value="no">Norge</option>
+        <option value="nz" selected="selected">New Zealand</option>
+        <option value="ph">Philippines</option>
+        <option value="pl">Polska</option>
+        <option value="pt">Portugal</option>
+        <option value="ro">România</option>
+        <option value="rs">Србија</option>
+        <option value="ru">	Россия</option>
+        <option value="sa">السعودية</option>
+        <option value="se">Sverige</option>
+        <option value="sg">Singapore</option>
+        <option value="si">Slovenija</option>
+        <option value="sk">Slovensko</option>
+        <option value="th">ประเทศไทย</option>
+        <option value="tr">Türkiye</option>
+        <option value="tw">Taiwan</option>
+        <option value="ua">Україна</option>
+        <option value="us">United States of America</option>
+        <option value="ve">Venezuela</option>
+        <option value="za">South Africa</option>
+    </select>
+    <label for="category">Category: </label>
+    <select name="category" id="categorySelect">
+        <option value="business">Business</option>
+        <option value="entertainment" selected="selected">Entertainment</option>
+        <option value="general">General</option>
+        <option value="health">Health</option>
+        <option value="science">Science</option>
+        <option value="sports">Sports</option>
+        <option value="technology">Technology</option>
+    </select>
+    <button id="hlSearchBtn" type="submit">Search</button>
+    <div id="hlResultsCtn"></div>
+
+    <h1>Sources</h1>
+    <div id="sourcesResultsCtn"></div>
+
+    <!-- jQuery -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+
+    <!-- bootstrap js -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- NEWS API key -->
     <script src="./js/key.js"></script>
